--- a/charts/joblabs/templates/ghost_resources.yaml
+++ b/charts/joblabs/templates/ghost_resources.yaml
@@ -19,7 +19,7 @@ metadata:
   labels:
     app: nginx
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: nginx
@@ -34,6 +34,30 @@ spec:
         ports:
         - containerPort: 80
         
+---
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: deployment-you-should-stay
+  labels:
+    app: nginx
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+      - name: nginx
+        image: nginx:1.14.2
+        ports:
+        - containerPort: 80       
+
 ---
 apiVersion: batch/v1
 kind: CronJob
