--- a/charts/gabschart/templates/ghost_resources.yaml
+++ b/charts/gabschart/templates/ghost_resources.yaml
@@ -35,7 +35,7 @@ spec:
         - containerPort: 80
         
 ---
-apiVersion: batch/v1
+apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
   name: cronjob-you-should-disappear
