--- a/charts/gabschart/another-values.yaml
+++ b/charts/gabschart/another-values.yaml
@@ -11,7 +11,7 @@ image:
   tag: ""
 
 imagePullSecrets: []
-nameOverride: "nginxfromgabslabs"
+nameOverride: "nginxhackedname"
 fullnameOverride: ""
 
 serviceAccount:
